dtext: fix bottom margins of [spoiler] blocks and emojis.
Fix block [spoiler] tags and block emojis not having their bottom margins removed when they were the
final elements of the DText container.

This resulted in these things having too much space on bottom when they were the last thing in a comment.

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -6,12 +6,17 @@
   word-break: break-word;
   text-wrap: pretty;
 
-  *:last-child {
-    margin-bottom: 0;
+  p, ul, pre, blockquote, details, div:where(.spoiler), table, h1, h2, h3, h4, h5, h6, article, media-gallery {
+    margin-bottom: var(--paragraph-spacing);
   }
 
-  p, ul, pre, blockquote, details, div.spoiler, table, h1, h2, h3, h4, h5, h6, article, media-gallery, emoji[data-mode="block"] {
+  // XXX Don't give emojis bottom margins when the comment ends in a run of block emojis.
+  emoji[data-mode="block"]:has(~ :not(emoji[data-mode="block"])) {
     margin-bottom: var(--paragraph-spacing);
+  }
+
+  *:last-child {
+    margin-bottom: 0;
   }
 
   h1, h2, h3, h4, h5, h6 {
